[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  bugzoo ~= 2.1.33
  kaskara ~= 0.0.6
  pyroglyph ~= 0.0.6
  cement ~= 3.0.4
  requests ~= 2.22.0
  sourcelocation ~= 1.0.1
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
addopts = -rx -v

[tox]
envlist = py37, py38

[testenv]
deps =
  mypy
  pytest
commands =
  mypy src
  pytest
