[metadata]
name = darjeeling
author = Christopher Timperley
author-email = ctimperley@cmu.edu
url = https://github.com/squaresLab/Darjeeling
description = Distributed, language-independent, compositional search-based program repair
long-description = file: README.rst, LICENSE
license = Apache License, Version 2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7


[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3
  bugzoo ~= 2.1
  comby ~= 0.0.2
  kaskara ~= 0.1
  pyroglyph ~= 0.0
  cement ~= 3.0
  loguru ~= 0.4
  requests ~= 2.22
  sourcelocation ~= 1.0
  dockerblade ~= 0.5
  websockets ~= 8.1
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 120
ignore = W605
per-file-ignores =
  src/darjeeling/__init__.py:E402,F401
  src/darjeeling/events/__init__.py:F401,F403
  src/darjeeling/test/__init__.py:F401
  src/darjeeling/coverage/__init__.py:F401
  src/darjeeling/searcher/__init__.py:F401
  src/darjeeling/transformation/__init__.py:F401
  src/darjeeling/transformation/classic/__init__.py:F401
  src/darjeeling/transformation/database/__init__.py:F401

[aliases]
test = pytest

[tool:pytest]
addopts = -rx -v

[tox:tox]
envlist = py37, py38

[testenv]
deps =
  -rrequirements.dev.txt
commands =
  mypy src
  flake8 src
  pytest
